# ai-assistant

./: .dockerignore  .env  .env.template  .gitignore  Dockerfile  INVOICE_INTEGRATION_README.md  README.md  cli.sh  docker-compose.yml  init.sh  invoice_ninja_openapi.json  nginx.conf  openwebui_config.json  requirements.backup.txt  requirements.txt  server.py  setup-windows-server.ps1  start.sh  test_country_fix.py  test_huggingface.py  test_invoice_integration.py  test_model.py
app/: airllm_processor.py  background.py  cli.py  config.py  email_processor.py  invoice_generator.py  invoice_llm_processor.py  invoice_ninja.py  llama_processor.py  llm_processor.py  main.py  openwebui_integration.py  schemas.py
app/templates/: base.html  chat.html
backend_assistant/: .env.assistant.template  README.md  pyproject.toml
backend_assistant/app/: calendar_handler.py  config.py  data_extractor.py  database.py  email_handler.py  invoiceninja_client.py  main.py  notification_handler.py  utils.py
backend_assistant/tests/: test_data_extractor.py  test_utils.py
backup_20250619_043811/: .env.bak  Dockerfile.bak  docker-compose.yml.bak  mysql_backup.sql  requirements.txt.bak
mysql/conf.d/: my.cnf
nginx/: nginx.conf
